--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "devs_ryan/laravel-easy-admin",
+    "name": "romtokarev/laravel-easy-admin",
     "description": "A simple admin panel for Laravel projects.",
     "keywords": ["framework", "laravel", "easy", "admin", "laravel easy admin", "easy admin", "easy api", "api", "laravel easy api"],
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Ryan Claxton",
-            "email": "rclaxton.dev@gmail.com"
+            "name": "Roman Tokarev",
+            "email": "79996969490@mail.ru"
         }
     ],
     "autoload": {
